--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100%; }
-			button { width: 150px; height: 50px; }
+			#b1 {width: 25%; height: 10%; position: absolute; left: 0;}
+			#b2 {width: 25%; height: 10%; position: absolute; right: 0;}
 		</style>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> 
 	</head>
 	<body>
-		<button type="button" onclick="increasespeed()">speed up</button>
-		<button type="button" onclick="decreasespeed()">speed down</button>
+		<button id="b1" type="button" onclick="increasespeed()">speed up</button>
+		<button id="b2" type="button" onclick="decreasespeed()">speed down</button>
 		<script src="js/three.js"></script>
 		<script src="js/script.js"></script>
 	</body>
