--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<button id="b1" type="button" onclick="increasespeed()">speed up</button>
 		<button id="b2" type="button" onclick="decreasespeed()">speed down</button>
 		<script src="js/three.js"></script>
+		<script src="js/OrbitControls.js"></script>
 		<script src="js/script.js"></script>
+		<!-- <script src="js/orbit.js"></script> -->
 	</body>
 </html>
